cmake_minimum_required(VERSION 3.6)
project(RoboArena CXX)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/cmake")
find_package(SDL2 REQUIRED)
find_package(SDL2_IMAGE REQUIRED)
file(GLOB SOURCES ${PROJECT_NAME}/*cpp)
file(GLOB HEADERS ${PROJECT_NAME}/*.h*)
# file(GLOB RESOURCES ${PROJECT_NAME}/*png)
INCLUDE_DIRECTORIES(${SDL2_INCLUDE_DIR})
if(APPLE)
    set_source_files_properties(${RESOURCES} PROPERTIES MACOSX_PACKAGE_LOCATION "Resources")
    add_executable(RoboArena MACOSX_BUNDLE ${SOURCES} ${HEADERS} ${RESOURCES})
elseif(WIN32)
#	set(WIN_RESOURCE_FILE ${CMAKE_CURRENT_SOURCE_DIR}/resources/roboarena.rc)
#    add_executable(RoboArena WIN32 ${SOURCES} ${HEADERS} ${WIN_RESOURCE_FILE})
	add_executable(RoboArena WIN32 ${SOURCES} ${HEADERS})
else()
    add_executable(RoboArena ${SOURCES} ${HEADERS} ${RESOURCES}) 
endif()
target_link_libraries(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES})
